--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,12 @@ body{
 
 .logo{
     color:#2196F3;
+
+}
+
+.fulllogo{
+    font-size: 26px;
+font-family:'Raleway'  ;
 }
 
 a {
@@ -21,89 +27,100 @@ a {
    }
 
    .navigation{
+ 
     font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.1;
     letter-spacing: 0.02em
+
+     
    }
 
    button {
     background: #2196F3; 
     color: #fff; 
+    width: 216px;
+    height: 50px;
     
    }
 
    .hero {
     color: #FFFFFF;;
-    font-style: normal;
+    
     font-weight: 900;
     font-size: 44px;
-    line-height: 60px;
+    line-height: 1.4;
    }
 
    .caption{
-    font-style: normal;
 font-weight: 700;
 font-size: 14px;
-line-height: 16px;
+line-height: 1.1;
 letter-spacing: 0.03em;
 text-transform: uppercase;
    }
 
 .text{
     color: #757575;
-    font-style: normal;
+    
 font-weight: 400;
 font-size: 14px;
-line-height: 24px;
+line-height: 1.7;
 letter-spacing: 0.03em;
 }
 
 .name{
-    font-style: normal;
+    
     font-weight: 500;
     font-size: 16px;
-    line-height: 19px;
+    line-height: 1.9;
   
     letter-spacing: 0.03em;
 }
 
 .job{
 color: #757575;
-font-style: normal;
+
 font-weight: 400;
 font-size: 16px;
-line-height: 19px;
+line-height: 1.9;
 letter-spacing: 0.03em;
 }
 
 .tel{
     color: #757575;
-    font-style: normal;
+  
 font-weight: 500;
 font-size: 14px;
-line-height: 16px;
+line-height: 1.1;
 letter-spacing: 0.02em;
 }
 
 .mail{
-   color:#FFFFFF 60% ; 
+   color: #2196F3 ; 
+   width: 135px;
+height: 16px;
 }
 
 .title{
 color: #212121;
-font-style: normal;
+
 font-weight: 700;
 font-size: 18px;
-line-height: 36px;
+line-height: 1.9;
 letter-spacing: 0.06em;
 }
 
 .sing{
 color: #757575;
-font-style: normal;
+
 font-weight: 400;
 font-size: 16px;
-line-height: 30px;
+line-height: 1.9;
 letter-spacing: 0.03em
+}
+
+.picture{
+    width: 370px;
+    height: 294px;
 }
