--- a/css/styles.css
+++ b/css/styles.css
@@ -36,8 +36,7 @@ a {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
-    letter-spacing: 0.02em
-
+    letter-spacing: 0.02em;
      
    }
 
@@ -48,6 +47,13 @@ a {
 font-size: 16px;
 line-height: 1.9;
 letter-spacing: 0.06em;
+width: 216px;
+height: 50px;
+border-radius: 4px;
+border-color: #2196F3;
+margin-left: 692px;
+
+
     
     
    }
@@ -58,6 +64,9 @@ letter-spacing: 0.06em;
     font-size: 44px;
     line-height: 1.4;
     letter-spacing: 0.06em;
+     margin-left: 452px;
+
+
    }
 
    .caption{
@@ -101,6 +110,7 @@ letter-spacing: 0.03em;
     font-size: 14px;
     line-height: 1.1;
     letter-spacing: 0.02em;
+   
 }
 
 .mail{
@@ -109,6 +119,8 @@ letter-spacing: 0.03em;
    font-size: 14px;
    line-height: 1.1;
    letter-spacing: 0.02em;
+
+  
 }
 
 .title{
@@ -134,14 +146,107 @@ letter-spacing: 0.03em
     font-size: 36px;
     line-height: 1.7;
     letter-spacing: 0.03em;
-
+    margin-left: 617px;
 }
 
 .adress
 {
     color:  #FFFFFF;
+    font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
+}
+
+.container{
+ margin-left: 30px;
+ margin-right: 30px;
+ width: 1200px;
+}
+
+.main-nav {
+
+    display: flex;
+
+}
+
+.item{
+margin-left: 50px;
+font-family: 'Roboto';
+font-weight: 500;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.02em;
+display: flex;
+}
+
+
+
+.itemmain{
+    margin-left: 0px;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    display: flex;
+    
+
+}
+
+.write{
+display: flex;
+ margin-left: 30px;
+}
+
+.firstli{
+margin-left: 0px;
+
+}
+.Foto{
+    display: flex;
+    margin-left: 60px;
+    
+}
+
+.Fotomain{
+    margin-left: 0px;
+}
+
+.team {
+    display: flex;
+    margin-left: 30px;
+    
+    list-style: none;
+}
+
+.element{
+ 
+    background-color: #fff;
+    margin-left: 30px;
+
+}
+
+
+.buttons{
+    display: flex;
+    
+}
+
+
+.market{
+    display: inline-block;
+    flex-wrap: wrap;
+
+}
+
+.galery{
+
+    flex-basis: calc((100% - 20px) / 3);
+  
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 4px;
+    display: inline-block;
 }
