--- a/css/styles.css
+++ b/css/styles.css
@@ -160,13 +160,12 @@ letter-spacing: 0.03em
 }
 
 .container{
- margin-left: 30px;
- margin-right: 30px;
+ margin-left: 200px;
+ margin-right: 200px;
  width: 1200px;
 }
 
 .main-nav {
-
     display: flex;
 
 }
@@ -206,7 +205,7 @@ margin-left: 0px;
 }
 .Foto{
     display: flex;
-    margin-left: 60px;
+    margin-left: 30px;
     
 }
 
@@ -229,11 +228,45 @@ margin-left: 0px;
 }
 
 
-.buttons{
-    display: flex;
-    
+.buttonportfolio{
+    background: #D3D3D3; 
+    color: #212121; 
+    font-weight: 700;
+font-size: 16px;
+line-height: 1.9;
+letter-spacing: 0.06em;
+width: 125px;
+height: 38px;
+border-radius: 4px;
+border-color: #D3D3D3;
+margin-left: 30px;
 }
 
+.buttonportfolio:hover {
+    background-color: #2196F3;
+    border-color: #2196F3;
+    padding: 2px; 
+}
+
+.buttonportfoliomain:hover {
+    background-color: #2196F3;
+    border-color: #2196F3;
+    padding: 2px; 
+}
+
+.buttonportfoliomain{
+    margin-left: 297px;
+    background: #D3D3D3; 
+    color: #212121; 
+    font-weight: 700;
+font-size: 16px;
+line-height: 1.9;
+letter-spacing: 0.06em;
+width: 125px;
+height: 38px;
+border-radius: 4px;
+border-color: #D3D3D3;
+}
 
 .market{
     display: inline-block;
@@ -242,11 +275,17 @@ margin-left: 0px;
 }
 
 .galery{
-
     flex-basis: calc((100% - 20px) / 3);
-  
     padding: 10px;
     background-color: #fff;
     border-radius: 4px;
     display: inline-block;
 }
+
+.buttonmain{
+display: flex;
+
+}
+
+
+
