--- a/css/styles.css
+++ b/css/styles.css
@@ -52,10 +52,7 @@ height: 50px;
 border-radius: 4px;
 border-color: #2196F3;
 margin-left: 692px;
-
-
-    
-    
+ 
    }
 
    .hero {
@@ -64,7 +61,7 @@ margin-left: 692px;
     font-size: 44px;
     line-height: 1.4;
     letter-spacing: 0.06em;
-     margin-left: 452px;
+     margin-left: 400px;
 
 
    }
@@ -146,7 +143,7 @@ letter-spacing: 0.03em
     font-size: 36px;
     line-height: 1.7;
     letter-spacing: 0.03em;
-    margin-left: 617px;
+    margin-left: 400px;
 }
 
 .adress
@@ -160,9 +157,10 @@ letter-spacing: 0.03em
 }
 
 .container{
- margin-left: 200px;
- margin-right: 200px;
- width: 1200px;
+width: 1200px;
+margin: auto;
+padding-left: 15px;
+padding-right: 15px;
 }
 
 .main-nav {
@@ -287,5 +285,13 @@ display: flex;
 
 }
 
+.container-elements{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 300px;
+    width: 1300px;
+}
 
-
+.button-hero{
+    margin-left: 500px;
+}
