--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,6 @@ a {
     font-size: 14px;
     line-height: 1.1;
     letter-spacing: 0.02em;
-     
    }
 
    button {
@@ -51,9 +50,8 @@ width: 216px;
 height: 50px;
 border-radius: 4px;
 border-color: #2196F3;
-margin-left: 692px;
- 
-   }
+
+  }
 
    .hero {
     color: #FFFFFF;;
@@ -61,7 +59,7 @@ margin-left: 692px;
     font-size: 44px;
     line-height: 1.4;
     letter-spacing: 0.06em;
-     margin-left: 400px;
+    text-align: center;
 
 
    }
@@ -73,6 +71,7 @@ font-size: 14px;
 line-height: 1.1;
 letter-spacing: 0.03em;
 text-transform: uppercase;
+
    }
 
 .text{
@@ -116,8 +115,6 @@ letter-spacing: 0.03em;
    font-size: 14px;
    line-height: 1.1;
    letter-spacing: 0.02em;
-
-  
 }
 
 .title{
@@ -143,7 +140,7 @@ letter-spacing: 0.03em
     font-size: 36px;
     line-height: 1.7;
     letter-spacing: 0.03em;
-    margin-left: 400px;
+    text-align: center;
 }
 
 .adress
@@ -161,7 +158,19 @@ width: 1200px;
 margin: auto;
 padding-left: 15px;
 padding-right: 15px;
+padding-top: 15px;
+    padding-bottom: 15px;
 }
+
+.container li{
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+} 
+
+
+
 
 .main-nav {
     display: flex;
@@ -293,5 +302,10 @@ display: flex;
 }
 
 .button-hero{
-    margin-left: 500px;
+    text-align: center;
+    margin-left: 0px;
+}
+
+.container-hero{
+    text-align: center;
 }
