--- a/css/styles.css
+++ b/css/styles.css
@@ -211,8 +211,12 @@ width: 1600px;
     gap: 30px;
     
     
+    
 }
 
+.fotomain{
+    margin-left: 215px;
+}
 
 
 .team {
@@ -226,6 +230,10 @@ width: 1600px;
     background-color: #fff;
     
 
+}
+
+.elementmain{
+    margin-left: 200px;
 }
 
 
@@ -256,7 +264,7 @@ margin-left: 30px;
 }
 
 .buttonportfoliomain{
-    margin-left: 150px;
+   
     background: #D3D3D3; 
     color: #212121; 
     font-weight: 700;
@@ -267,12 +275,14 @@ width: 125px;
 height: 38px;
 border-radius: 4px;
 border-color: #D3D3D3;
+margin-left: 532px;
 
 }
 
 .market{
     display: inline-block;
     flex-wrap: wrap;
+    width: 1600px;
 
 }
 
@@ -286,8 +296,8 @@ border-color: #D3D3D3;
 
 .buttonmain{
 display: flex;
-
 }
+
 
 .container-elements{
     display: flex;
@@ -304,7 +314,7 @@ display: flex;
     text-align: center;
     width: 1600px;
     height: 600px;
-    background-color: teal;
+    background-color:#2F303A;
 
 }
 
@@ -312,10 +322,6 @@ display: flex;
  display: flex;
  gap: 30px;
 
-}
-
-.text-first{
-   
 }
 
 
@@ -343,12 +349,51 @@ margin-right: 15px;
 
 
 .squadt{
-margin-right: 325px;
+margin-left:0px;
 
 }
 
 .foot{
-    
     margin-left: 0px;
     
 }
+
+.container-f{
+    background-color: #2F303A;
+    height: 251px;
+    
+}
+
+.flogo{
+    font-size: 26px;
+font-family:'Raleway'  ;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.2;
+letter-spacing: 0.03em;
+margin-left: 215px;
+margin-right: 93px;
+
+}
+
+.adressf{
+    color:  #FFFFFF;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+
+}
+
+.footerinfo{
+
+margin-left: 215px;
+
+}
+
+.middle{
+
+    margin-left: 205px;
+}
+
