--- a/css/styles.css
+++ b/css/styles.css
@@ -238,7 +238,8 @@ width: 1600px;
 
 
 .buttonportfolio{
-    background: #D3D3D3; 
+    background:#F5F4FA; 
+    ; 
     color: #212121; 
     font-weight: 700;
 font-size: 16px;
@@ -247,7 +248,8 @@ letter-spacing: 0.06em;
 width: 125px;
 height: 38px;
 border-radius: 4px;
-border-color: #D3D3D3;
+border-color: #F5F4FA; 
+;
 margin-left: 30px;
 }
 
@@ -260,12 +262,11 @@ margin-left: 30px;
 .buttonportfoliomain:hover {
     background-color: #2196F3;
     border-color: #2196F3;
-    padding: 2px; 
 }
 
 .buttonportfoliomain{
    
-    background: #D3D3D3; 
+    background: #F5F4FA; 
     color: #212121; 
     font-weight: 700;
 font-size: 16px;
@@ -274,8 +275,8 @@ letter-spacing: 0.06em;
 width: 125px;
 height: 38px;
 border-radius: 4px;
-border-color: #D3D3D3;
-margin-left: 532px;
+border-color: #F5F4FA;
+margin-left: 500px;
 
 }
 
@@ -303,6 +304,8 @@ display: flex;
     display: flex;
     flex-wrap: wrap;
     width: 1300px;
+    margin-bottom: 91px;
+    margin-top: 51px;
 }
 
 .button-hero{
@@ -315,12 +318,14 @@ display: flex;
     width: 1600px;
     height: 600px;
     background-color:#2F303A;
+   
 
 }
 
 .container-head{
  display: flex;
  gap: 30px;
+ margin-top: 24px;
 
 }
 
@@ -343,6 +348,8 @@ margin-right: 15px;
     
     text-align: center;
     width: 1600px;
+    margin-top: 91px;
+    margin-bottom: 91px;
     
 
 }
@@ -377,7 +384,7 @@ margin-right: 93px;
 }
 
 .adressf{
-    color:  #FFFFFF;
+    color:#FFFFFF;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -385,15 +392,25 @@ margin-right: 93px;
     letter-spacing: 0.03em;
 
 }
-
 .footerinfo{
 
 margin-left: 215px;
+margin-top: 61px;
 
 }
 
 .middle{
 
     margin-left: 205px;
+}
+.studio{
+color: white;
+
+}
+
+.container-text{
+margin-top: 93px;
+margin-bottom: 93px;
+
 }
 
