--- a/css/styles.css
+++ b/css/styles.css
@@ -161,8 +161,8 @@ letter-spacing: 0.03em
 
 .container{
 width: 1600px;
-padding-left: 15px;
-padding-right: 15px;
+padding: 0 15px;
+margin: 0 auto;
 
 }
 
@@ -300,7 +300,7 @@ display: flex;
 }
 
 
-.container-elements{
+.thing{
     display: flex;
     flex-wrap: wrap;
     width: 1300px;
@@ -313,16 +313,16 @@ display: flex;
     margin-left: 0px;
 }
 
-.container-hero{
+.foundation{
     text-align: center;
     width: 1600px;
     height: 600px;
     background-color:#2F303A;
+    
    
-
 }
 
-.container-head{
+.vartex{
  display: flex;
  gap: 30px;
  margin-top: 24px;
@@ -344,7 +344,7 @@ margin-right: 15px;
     
 }
 
-.container-squad{
+.brigade{
     
     text-align: center;
     width: 1600px;
@@ -365,7 +365,7 @@ margin-left:0px;
     
 }
 
-.container-f{
+.bottom{
     background-color: #2F303A;
     height: 251px;
     
@@ -401,14 +401,14 @@ margin-top: 61px;
 
 .middle{
 
-    margin-left: 205px;
+    
 }
 .studio{
 color: white;
 
 }
 
-.container-text{
+.version{
 margin-top: 93px;
 margin-bottom: 93px;
 
